--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
 
         <div class = "bio">
-            <p1>I am a rising second-year student at the George Washington University. I am studying international affairs and computer science, hoping to work in technology and international development. My goal throughout this challenge is to grow as a coder, web developer, and storyteller, combining my passions to make a tangible impact. As you scroll through this mini-portfolio, feel free to click on the images. They will take you to links of things I find really interesting related to that particular passion!</p1>
+            <p1>I am a rising second-year student at the George Washington University. I am studying international affairs and computer science, hoping to work in technology and international development. My goal throughout this challenge is to grow as a coder, web developer, and storyteller, combining my passions to make a tangible impact. As you scroll through this mini-portfolio, feel free to click each tab and the images for more information about that particular interest!</p1>
         </div>
 
         <div class = "container1">
